# ghost

./: README.md
ghost/: main.py  pyproject.toml
ghost/src/agent/: agent.py
ghost/src/agent/policies/action/: human.py  policy.py  qvalue.py  random.py
ghost/src/agent/policies/exploration/: __init__.py  epsilon.py  policy.py
ghost/src/agent/policies/learning/: __init__.py  noop.py  policy.py  qlearning.py
ghost/src/cli/: __init__.py  evaluate.py  main.py  run.py  train.py  utils.py
ghost/src/cli/agent/: __init__.py  create.py  ls.py  rm.py
ghost/src/engine/: __init__.py  agent_manager.py  engine.py  environment_manager.py
ghost/src/envs/: __init__.py
ghost/src/envs/custom/: __init__.py  tictactoe.py
ghost/src/envs/gymnasium/: __init__.py  cartpole.py  lunar_lander.py
ghost/tests/environments/custom/tictactoe/: test_tictactoe.py
practice/: agents.py
practice/CartPole/: multi-proocess.py  pyproject.toml  single-thread.py
practice/LunarLander/: cli.py  main.py  pyproject.toml  vectorized.py
practice/TicTacToe/: README.md  main.py  pyproject.toml
shell/: README.md  ghost.code-workspace  platformio.ini
shell/src/: Makefile  main.c  main.cpp  main.hex
